--- a/index.html
+++ b/index.html
@@ -16,7 +16,20 @@
 
 <body>
     <header class="header">
-        Some text...
+        <!-- img is an inline element so for styling we need a container -->
+        <div class="logo-box">
+            <!-- alt helps in SEO -->
+            <img src="img/logo-white.png" alt="Logo" class="logo">
+        </div>
+
+        <div class="text-box">
+            <h1 class="heading-primary">
+                <span class="heading-primary-main">Outdoors</span>
+                <span class="heading-primary-sub">is where life happens</span>
+            </h1>
+        </div>
+
+
     </header>
 
 </body>
